# wget

./: .gitignore  Cargo.toml  README.md  test_urls.txt
examples/: links.txt
src/: main.rs
src/background/: logger.rs  mod.rs  process.rs  readme.md
src/cli/: args.rs  readme.md
src/download/: client.rs  mod.rs  progress.rs  readme.md
src/http/: client.rs  mod.rs  readme.md
src/io/: input.rs  mod.rs  readme.md
src/mirror/: crawler.rs  mod.rs  parser.rs  readme.md
src/output/: logger.rs  mod.rs
src/rate/: limiter.rs  mod.rs  readme.md
src/resume/: handler.rs  mod.rs  readme.md
src/retry/: mod.rs  policy.rs
src/utils/: readme.md  url.rs
